# taptime

./: .dockerignore  .env.production.example  .gitignore  DEPLOYMENT.md  Justfile  compose.yaml
taptime/src-tauri/: Cargo.toml
taptime_admin_cli/: Cargo.toml  Dockerfile
taptime_admin_cli/src/: main.rs
taptime_app/: components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
taptime_app/src/: app.css  app.html
taptime_app/src-tauri/: Cargo.toml  Tauri.toml  rustfmt.toml  tauri.conf.json
taptime_app/src-tauri/icons/: icon.icns
taptime_app/src-tauri/src/: main.rs
taptime_app/src/routes/: +layout.svelte  +page.svelte
taptime_core/: Cargo.toml  build.rs
taptime_core/schema/taptime/: uuid.proto
taptime_core/src/: balance.rs  day.rs  day_flags.rs  error.rs  event.rs  lib.rs  local_time.rs  store.rs  uid.rs  user.rs
taptime_mcu/: CLAUDE.md  Cargo.toml  Embed.toml  README.md  memory.x
taptime_mcu/.cargo/: config.toml
taptime_mcu/src/: firmware.rs  heap.rs  main.rs
taptime_mcu/src/firmware/: buzzer.rs  oled.rs  onboard_led.rs  rfid.rs  rtc.rs  wifi.rs
taptime_proto/: buf.gen.yaml  package-lock.json  package.json
taptime_proto/src/taptime/: balance_pb.ts  date_pb.ts  day_pb.ts  event_pb.ts  local_time_pb.ts  tz_pb.ts  uid_pb.ts  user_pb.ts  uuid_pb.ts  weekday_pb.ts
taptime_proto/src/taptime/services/: admin_connect.ts  admin_pb.ts  auth_connect.ts  auth_pb.ts  store_connect.ts  store_pb.ts
taptime_schema/: Cargo.toml  buf.yaml  build.rs
taptime_schema/.cargo/: config.toml
taptime_schema/schema/taptime/: balance.proto  date.proto  day.proto  event.proto  local_time.proto  tz.proto  uid.proto  user.proto  uuid.proto  weekday.proto
taptime_schema/schema/taptime/services/: admin.proto  auth.proto  store.proto
taptime_schema/src/: error.rs  lib.rs
taptime_server/: Cargo.toml  Dockerfile  Justfile  compose.yaml
taptime_server/migrations/: 0001_create_users.sql  0002_create_days.sql  0003_create_day_required_work_overrides.sql  0004_add_user_start_date.sql  0005_create_admin_bans.sql
taptime_server/src/: args.rs  error.rs  jwt.rs  main.rs
taptime_server/src/interceptors/: auth.rs  mod.rs
taptime_server/src/services/: access.rs  admin.rs  auth.rs  db.rs  mod.rs  store.rs
taptime_server/src/services/queries/: create_user.sql  delete_day_flags.sql  delete_day_required_work_override.sql  delete_day_required_work_overrides.sql  delete_event.sql  delete_events.sql  delete_user.sql  email_exists_for_other_user.sql  fetch_active_ip_bans.sql  fetch_active_user_ban.sql  fetch_day_flags.sql  fetch_day_flags_range.sql  fetch_day_required_work_overrides_range.sql  fetch_events.sql  fetch_events_range.sql  fetch_user.sql  fetch_user_credentials.sql  fetch_user_credentials_by_user_id.sql  fetch_user_settings.sql  insert_event.sql  update_user_credentials_email.sql  update_user_last_seen.sql  update_user_profile.sql  update_user_rfid_uid.sql  update_user_settings.sql  upsert_day_flags.sql  upsert_day_required_work_override.sql  upsert_user_ip_address.sql  write_user_credentials.sql
taptime_typescript/: AdminLoginRequest.ts  AdminLoginResponse.ts  AdminUserDetail.ts  AdminUserListItem.ts  AuthResponse.ts  Balance.ts  BalanceType.ts  BanKind.ts  BanRecord.ts  CreateBanRequest.ts  Credentials.ts  DashboardRequest.ts  DashboardResponse.ts  Date.ts  Day.ts  DayFlag.ts  DaySummary.ts  DeleteAccountRequest.ts  DeleteEventRequest.ts  DeleteUserRequest.ts  Duration.ts  Empty.ts  Event.ts  EventRequest.ts  EventType.ts  GetUserDetailRequest.ts  KnownIpAddress.ts  ListBansRequest.ts  ListBansResponse.ts  ListUsersRequest.ts  ListUsersResponse.ts  LocalTime.ts  MonthlyStats.ts  RegisterUserRequest.ts  RevokeBanRequest.ts  SetFlagRequest.ts  SetRequiredWorkHoursOverrideRequest.ts  Settings.ts  Timestamp.ts  Tz.ts  (+7 more)
taptime_web/: Dockerfile  Justfile  components.json  package-lock.json  package.json  svelte.config.js
taptime_web/src/: app.css  app.html
taptime_web/src/lib/: account.ts  dashboard.ts  grpc.ts
taptime_web/src/lib/blocks/: SidebarBlock.svelte  SiteHeaderBlock.svelte
taptime_web/src/lib/blocks/components/: LunchBreakSelect.svelte  TimeZoneSelect.svelte  WeekdaySelect.svelte  WorkHoursInput.svelte  index.ts
taptime_web/src/lib/blocks/sidebar/: NavMainBlock.svelte  NavSecondaryBlock.svelte  NavUserBlock.svelte
taptime_web/src/lib/components/: button.svelte
taptime_web/src/lib/components/ui/button-group/: button-group-text.svelte  button-group.svelte
taptime_web/src/lib/components/ui/context-menu/: context-menu-content.svelte  context-menu-sub-content.svelte
taptime_web/src/lib/components/ui/copy-button/: copy-button.svelte
taptime_web/src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-sub-content.svelte
taptime_web/src/lib/components/ui/meter/: index.ts  meter.svelte
taptime_web/src/lib/components/ui/password/: password-copy.svelte  password-input.svelte  password-strength.svelte  password-toggle-visibility.svelte  password.svelte
taptime_web/src/lib/components/ui/split-button/: index.ts  split-button-action.svelte  split-button-content.svelte  split-button-select-action.svelte  split-button-select-trigger.svelte  split-button-select.svelte  split-button.svelte  (+1 more)
taptime_web/src/lib/icons/: Logo.svelte
taptime_web/src/lib/services/: AuthService.ts  StoreService.ts  index.ts
taptime_web/src/lib/stores/: index.ts  today.svelte.ts  user.svelte.ts
taptime_web/src/lib/types/: Event.ts  LocalDate.ts  LocalTime.ts  index.ts
taptime_web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
taptime_web/src/routes/(app)/: +layout.svelte
taptime_web/src/routes/(app)/dashboard/: +page.svelte
taptime_web/src/routes/(app)/history/: +page.svelte
taptime_web/src/routes/(app)/profile/: +page.svelte
taptime_web/src/routes/(app)/reports/: +page.svelte
taptime_web/src/routes/(app)/settings/: +page.svelte
taptime_web/src/routes/(auth)/: +layout.svelte
taptime_web/src/routes/(auth)/login/: +page.svelte
taptime_web/src/routes/(auth)/register/: +page.svelte
(+13 files in other folders)
