[package]
name = "taptime_core"
version = "1.0.0"
edition = "2024"

[features]
vendored-protobuf = ["protobuf-src"]

[dependencies]
thiserror = "2"
bitflags = { version = "2", features = ["serde"] }
derive_more = { version = "2", features = ["display", "from_str"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

buffa = "0.4"

[build-dependencies]
buffa-build = "0.4"
protobuf-src = { version = "2", optional = true }