[package]
name = "taptime_core"
version = "1.0.0"
edition = "2024"

[dependencies]
taptime_schema = { path = "../taptime_schema" }

thiserror = "2"
bitflags = { version = "2", features = ["serde"] }
derive_more = { version = "2", features = ["display", "from_str"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

prost = { version = "0.14", features = ["default"] }
prost-types = { version = "0.14", features = ["chrono"] }
