[package]
name = "taptime"
version = "0.1.0"
edition = "2021"
exclude = ["bot"]

[features]
clock_set = []
default = []

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-alloc = "0.7"

embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.6" }
embassy-futures = "0.1"
embassy-stm32 = { version = "0.6", features = [
    "defmt",
    "unstable-pac",
    "stm32f411ce",
    "memory-x",
    "time-driver-any",
    "exti",
] }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

chrono = { version = "0.4", default-features = false, features = [] }
build-time = "0.1"

embedded-graphics = "0.8"
embedded-iconoir = { version = "0.2", features = ["12px", "32px"] }
ssd1306 = { path = "extern/ssd1306", features = ["default"] }
mfrc522 = "0.8"
ds323x = { version = "0.7", features = ["defmt"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = "z"
debug = 2
lto = true
codegen-units = 1
