[package]
name = "taptime_server"
version = "1.0.0"
edition = "2024"

[dependencies]
taptime_core = { path = "../taptime_core" }

thiserror = "2"
derive_more = { version = "2", features = ["display", "from_str"] }

uuid = "1"
chrono = "0.4"
directories = "6"
semver = "1"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
password-hash = "0.6"
rand = "0.9"