[package]
name = "taptime_server"
version = "1.0.0"
edition = "2024"

[dependencies]
taptime_core = { path = "../taptime_core" }
taptime_schema = { path = "../taptime_schema", features = ["server"] }

thiserror = "2"
derive_more = { version = "2", features = ["display", "from_str"] }

uuid = "1"
chrono = "0.4"
chrono-tz = "0.10"
directories = "6"
semver = "1"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"

argon2 = "0.5"
password-hash = "0.6"
rand = "0.9"

clap = { version = "4", features = ["derive", "color", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9"