[package]
name = "taptime_app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "taptime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies.tauri]
version = "2"
features = [
    "uuid",
    "config-toml",
    "native-tls-vendored",
    "image",
    "image-png"
]

[dependencies]
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[workspace.metadata.typos.default]
extend-ignore-words-re = [
    '^[a-zA-Z]{1,2}$' # ignore words up to length 2
]
